--- a/Musmanni/Info.plist
+++ b/Musmanni/Info.plist
@@ -40,5 +40,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Nos permite ubicar la agencia más cercana a ti</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Nos permite ubicar la agencia más cercana a ti</string>
 </dict>
 </plist>
