--- a/Musmanni/Info.plist
+++ b/Musmanni/Info.plist
@@ -22,6 +22,10 @@
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Nos permite ubicar la agencia más cercana a ti</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Nos permite ubicar la agencia más cercana a ti</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -33,16 +37,12 @@
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDefault</string>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Nos permite ubicar la agencia más cercana a ti</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Nos permite ubicar la agencia más cercana a ti</string>
 </dict>
 </plist>
