--- a/Musmanni/Info.plist
+++ b/Musmanni/Info.plist
@@ -16,15 +16,6 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>7</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb1040421749332097</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>FacebookAppID</key>
@@ -87,5 +78,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>fifco.musmanni</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>valoresFifco</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
