--- a/Musmanni/Info.plist
+++ b/Musmanni/Info.plist
@@ -16,8 +16,19 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>7</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>fifco.musmanni</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1040421749332097</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>1040421749332097</string>
 	<key>FacebookDisplayName</key>
@@ -78,16 +89,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLName</key>
-            <string>fifco.musmanni</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>valoresFifco</string>
-            </array>
-        </dict>
-    </array>
 </dict>
 </plist>
